Fix broken links

--- a/test/changelog.html
+++ b/test/changelog.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div class="content">
-    <a href="manual.html" class="btn-back">← Back to Manual</a>
+    <a href="manual.html#officers" class="btn-back">← Back to Manual</a>
 
 ```
 <div class="header-card">
@@ -333,7 +333,6 @@
 </div>
 
 <div class="footer">Meeting Tools &nbsp;·&nbsp; Changelog &nbsp;·&nbsp; Southern Dutchess Toastmasters</div>
-```
 
 </div>
 </body>
