--- a/test/test-plan.html
+++ b/test/test-plan.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 <div class="content">
-    <a href="index.html" class="btn-back">← Back to App</a>
+    <a href="manual.html#officers" class="btn-back">← Back to Manual</a>
 
 ```
 <div class="header-card">
@@ -769,7 +769,6 @@
 </div>
 
 <div class="footer">Meeting Tools v3.1.5 &nbsp;·&nbsp; Test Plan &nbsp;·&nbsp; Southern Dutchess Toastmasters</div>
-```
 
 </div>
 </body>
