--- a/test/technical-reference.html
+++ b/test/technical-reference.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="content">
-        <a href="index.html" class="btn-back">← Back to App</a>
+        <a href="manual.html#officers" class="btn-back">← Back to Manual</a>
 
 ```
     <div class="card">
@@ -521,7 +521,6 @@ durationMins: string
 
     <div class="footer">Meeting Tools v3.1.5 &nbsp;·&nbsp; Technical Reference &nbsp;·&nbsp; Southern Dutchess Toastmasters</div>
 </div>
-```
 
 </body>
 </html>
